# neurone

./: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  TEST.cpp  main_neurone.cpp  neurone.cpp  neurone.hpp  neurone_main.cpp  neurones.cpp  neurones.hpp
html/: annotated.html  class_neurone-members.html  class_neurone.html  classes.html  files.html  functions.html  functions_func.html  md_README.html  neurones_8hpp_source.html  pages.html
html/search/: all_1.js  all_2.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js
latex/: annotated.tex  class_neurone.tex  refman.tex
src/: neurone_main.cpp  neurones.cpp
